wish me luck !!!

--- a/template/insert.html
+++ b/template/insert.html
@@ -235,13 +235,13 @@
                       <div class="w-full md:w-auto p-2">
                         <div class="flex flex-wrap justify-between -m-1.5">
                           <div class="w-full md:w-auto p-1.5">
-                            <button
+                            <button 
                               class="flex flex-wrap justify-center w-full px-4 py-2 font-medium text-sm text-coolGray-500 hover:text-coolGray-600 border border-coolGray-200 hover:border-coolGray-300 bg-white rounded-md shadow-button">
                               <p>Cancel</p>
                             </button>
                           </div>
                           <div class="w-full md:w-auto p-1.5">
-                            <button
+                            <button id="button"
                               class="flex flex-wrap justify-center w-full px-4 py-2 bg-green-500 hover:bg-green-600 font-medium text-sm text-white border border-green-500 rounded-md shadow-button">
                               <p>Save</p>
                             </button>
@@ -257,7 +257,7 @@
                           <p class="text-sm text-coolGray-800 font-semibold">Nama</p>
                         </div>
                         <div class="w-full md:flex-1 p-3">
-                          <input
+                          <input id="nama"
                             class="w-full px-4 py-2.5 text-base text-coolGray-900 font-normal outline-none focus:border-green-500 border border-coolGray-200 rounded-lg shadow-input"
                             type="text" placeholder="Nama">
                         </div>
@@ -271,7 +271,7 @@
                           <p class="text-sm text-coolGray-800 font-semibold">Jabatan</p>
                         </div>
                         <div class="w-full md:flex-1 p-3">
-                          <input
+                          <input id="jabatan"
                             class="w-full px-4 py-2.5 text-base text-coolGray-900 font-normal outline-none focus:border-green-500 border border-coolGray-200 rounded-lg shadow-input"
                             type="text" placeholder="Jabatan">
                         </div>
@@ -286,7 +286,7 @@
                           <p class="text-sm text-coolGray-800 font-semibold">No HP</p>
                         </div>
                         <div class="w-full md:flex-1 p-3">
-                          <input
+                          <input id="phone_number"
                             class="w-full px-4 py-2.5 text-base text-coolGray-900 font-normal outline-none focus:border-green-500 border border-coolGray-200 rounded-lg shadow-input"
                             type="text" placeholder="No HP">
                         </div>
@@ -301,7 +301,7 @@
                           <p class="text-sm text-coolGray-800 font-semibold">Lokasi</p>
                         </div>
                         <div class="w-full md:flex-1 p-3">
-                          <input
+                          <input id="location"
                             class="w-full px-4 py-2.5 text-base text-coolGray-900 font-normal outline-none focus:border-green-500 border border-coolGray-200 rounded-lg shadow-input"
                             type="text" placeholder="Lokasi">
                         </div>
@@ -316,12 +316,12 @@
                           <p class="text-sm text-coolGray-800 font-semibold">Longitude & Latitude</p>
                         </div>
                         <div class="w-full md:flex-1 p-3">
-                          <input
+                          <input id="longitude"
                             class="w-full px-4 py-2.5 text-base text-coolGray-900 font-normal outline-none focus:border-green-500 border border-coolGray-200 rounded-lg shadow-input"
                             type="text" placeholder="Longitude">
                         </div>
                         <div class="w-full md:flex-1 p-3">
-                          <input
+                          <input id="latitude"
                             class="w-full px-4 py-2.5 text-base text-coolGray-900 font-normal outline-none focus:border-green-500 border border-coolGray-200 rounded-lg shadow-input"
                             type="text" placeholder="Latitude">
                         </div>
@@ -343,7 +343,7 @@
                                 d="M11.3333 6.1133C11.2084 5.98913 11.0395 5.91943 10.8633 5.91943C10.6872 5.91943 10.5182 5.98913 10.3933 6.1133L8.00001 8.47329L5.64001 6.1133C5.5151 5.98913 5.34613 5.91943 5.17001 5.91943C4.99388 5.91943 4.82491 5.98913 4.70001 6.1133C4.63752 6.17527 4.58792 6.249 4.55408 6.33024C4.52023 6.41148 4.50281 6.49862 4.50281 6.58663C4.50281 6.67464 4.52023 6.76177 4.55408 6.84301C4.58792 6.92425 4.63752 6.99799 4.70001 7.05996L7.52667 9.88663C7.58865 9.94911 7.66238 9.99871 7.74362 10.0326C7.82486 10.0664 7.912 10.0838 8.00001 10.0838C8.08801 10.0838 8.17515 10.0664 8.25639 10.0326C8.33763 9.99871 8.41136 9.94911 8.47334 9.88663L11.3333 7.05996C11.3958 6.99799 11.4454 6.92425 11.4793 6.84301C11.5131 6.76177 11.5305 6.67464 11.5305 6.58663C11.5305 6.49862 11.5131 6.41148 11.4793 6.33024C11.4454 6.249 11.3958 6.17527 11.3333 6.1133Z"
                                 fill="#8896AB"></path>
                             </svg>
-                            <select
+                            <select  id="checkin"
                               class="appearance-none w-full py-2.5 px-4 text-coolGray-900 text-base font-normal bg-white border outline-none border-coolGray-200 focus:border-green-500 rounded-lg shadow-input">
                               <option>Masuk</option>
                               <option>Keluar</option>
@@ -361,12 +361,12 @@
                           <p class="text-sm text-coolGray-800 font-semibold">Jam Masuk & Jam Keluar</p>
                         </div>
                         <div class="w-full md:w-1/3 p-3">
-                          <input
+                          <input id="jam_masuk"
                             class="w-full px-4 py-2.5 text-base text-coolGray-900 font-normal outline-none focus:border-green-500 border border-coolGray-200 rounded-lg shadow-input"
                             type="text" placeholder="Jam Masuk">
                         </div>
                         <div class="w-full md:w-1/3 p-3">
-                          <input
+                          <input id="jam_keluar"
                             class="w-full px-4 py-2.5 text-base text-coolGray-900 font-normal outline-none focus:border-green-500 border border-coolGray-200 rounded-lg shadow-input"
                             type="text" placeholder="Jam Keluar">
                         </div>
@@ -381,7 +381,7 @@
                           <p class="text-sm text-coolGray-800 font-semibold">Durasi Kerja</p>
                         </div>
                         <div class="w-full md:w-1/3 p-3">
-                          <input 
+                          <input id="durasi"
                             class="w-full px-4 py-2.5 text-base text-coolGray-900 font-normal outline-none focus:border-green-500 border border-coolGray-200 rounded-lg shadow-input"
                             type="text" placeholder="Durasi Kerja">
                         </div>
@@ -396,7 +396,7 @@
                           <p class="text-sm text-coolGray-800 font-semibold">Hari Kerja</p>
                         </div>
                         <div class="w-full md:flex-1 p-3">
-                          <input 
+                          <input id="hari_kerja"
                             class="w-full px-4 py-2.5 text-base text-coolGray-900 font-normal outline-none focus:border-green-500 border border-coolGray-200 rounded-lg shadow-input"
                             type="text" placeholder="Hari Kerja"><span>Note : Untuk Hari Kerja merupakan string slice (string[]) maka untuk menginputkan hari dapat menggunakan separator koma (,)<br><b>Contoh : Senin,Selasa,Kamis</b></span>
                         </div>
@@ -423,6 +423,7 @@
       </div>
     </section>
   </div>
+  <script type="module" src="../js/controller/post.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
   <script src="../js/charts-demo.js"></script>
 </body>
